fix menu dialog in dark mode

--- a/src/app/Header/Header.scss
+++ b/src/app/Header/Header.scss
@@ -62,3 +62,7 @@
     }
   }
 }
+
+.dialog {
+  background-color: var(--secondary-bg-color);
+}
